aws_network.yml
Description: >
    Carlos Valverde Udacity.
    This is a template that creates a pair of public and private subnets across two
    AZs, deploy an internet gateway, a table route on the public subnets and NAT gateways
    in order to make possible the communication between public and private subnets.
Parameters:
    EnvironmentName:
        Description: Name that will be prefixed across all resources
        Type: String
    VpcCIDR:
        Description: VPC range in CIDR notation
        Type: String
        Default: 10.0.0.0/16
    PublicSubnet1CIDR:
        Description: IP range for the public subnet 1
        Type: String
    PublicSubnet2CIDR:
        Description: IP range for the public subnet 2
        Type: String
    PrivateSubnet1CIDR:
        Description: IP range for the private subnet 1
        Type: String
    PrivateSubnet2CIDR:
        Description: IP range for the private subnet 2
        Type: String
Resources:
        VPC:
            Type: AWS::EC2::VPC
            Properties:
                CidrBlock: !Ref VpcCIDR
                EnableDnsHostnames: true
                Tags:
                    - Key: Name
                      Value: !Ref EnvironmentName
        InternetGateway:
            Type: AWS::EC2::InternetGateway
            Properties:
                Tags:
                    - Key: Name
                      Value: !Ref EnvironmentName
        InternetGatewayAttachment:
            Type: AWS::EC2::VPCGatewayAttachment
            Properties:
                InternetGatewayId: !Ref InternetGateway
                VpcId: !Ref VPC
        PublicSubnet1:
            Type: AWS::EC2::Subnet
            Properties:
                VpcId: !Ref VPC
                AvailabilityZone: !Select [ 0, !GetAZs '' ]
                CidrBlock: !Ref PublicSubnet1CIDR
                MapPublicIpOnLaunch: true
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
        PublicSubnet2:
            Type: AWS::EC2::Subnet
            Properties:
                VpcId: !Ref VPC
                AvailabilityZone: !Select [ 1, !GetAZs '' ]
                CidrBlock: !Ref PublicSubnet2CIDR
                MapPublicIpOnLaunch: true
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
        PrivateSubnet1:
            Type: AWS::EC2::Subnet
            Properties:
                VpcId: !Ref VPC
                AvailabilityZone: !Select [ 0, !GetAZs '' ]
                CidrBlock: !Ref PrivateSubnet1CIDR
                MapPublicIpOnLaunch: false
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
        PrivateSubnet2:
            Type: AWS::EC2::Subnet
            Properties:
                VpcId: !Ref VPC
                AvailabilityZone: !Select [ 1, !GetAZs '' ]
                CidrBlock: !Ref PrivateSubnet2CIDR
                MapPublicIpOnLaunch: false
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
        NatGateway1EIP:
            Type: AWS::EC2::EIP
            DependsOn: InternetGatewayAttachment
            Properties:
                Domain: vpc
        NatGateway2EIP:
            Type: AWS::EC2::EIP
            DependsOn: InternetGatewayAttachment
            Properties:
                Domain: vpc
        NatGateway1:
            Type: AWS::EC2::NatGateway
            Properties:
                AllocationId: !GetAtt NatGateway1EIP.AllocationId
                SubnetId: !Ref PublicSubnet1
        NatGateway2:
            Type: AWS::EC2::NatGateway
            Properties:
                AllocationId: !GetAtt NatGateway2EIP.AllocationId
                SubnetId: !Ref PublicSubnet2
        PublicRouteTable:
            Type: AWS::EC2::RouteTable
            Properties:
                VpcId: !Ref VPC
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} public routes
        DefaultPublicRoute:
            Type: AWS::EC2::Route
            DependsOn: InternetGatewayAttachment
            Properties:
                RouteTableId: !Ref PublicRouteTable
                DestinationCidrBlock: 0.0.0.0/0
                GatewayId: !Ref InternetGateway
        PublicSubnet1RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PublicRouteTable
                SubnetId: !Ref PublicSubnet1
        PublicSubnet2RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PublicRouteTable
                SubnetId: !Ref PublicSubnet2
        PrivateRouteTable1:
            Type: AWS::EC2::RouteTable
            Properties:
                VpcId: !Ref VPC
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} private routes for AZ1
        DefaultPrivateRoute1:
            Type: AWS::EC2::Route
            Properties:
                RouteTableId: !Ref PrivateRouteTable1
                DestinationCidrBlock: 0.0.0.0/0
                NatGatewayId: !Ref NatGateway1
        PrivateSubnet1RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PrivateRouteTable1
                SubnetId: !Ref PrivateSubnet1
        PrivateRouteTable2:
            Type: AWS::EC2::RouteTable
            Properties:
                VpcId: !Ref VPC
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} private routes for AZ2
        DefaultPrivateRoute2:
            Type: AWS::EC2::Route
            Properties:
                RouteTableId: !Ref PrivateRouteTable2
                DestinationCidrBlock: 0.0.0.0/0
                NatGatewayId: !Ref NatGateway2
        PrivateSubnet2RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PrivateRouteTable2
                SubnetId: !Ref PrivateSubnet2
Outputs:
    VPC:
        Description: A reference for the VPC
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCId
    VPCPublicRouteTable:
        Description: Public Routing
        Value: !Ref PublicRouteTable
        Export:
            Name: !Sub ${EnvironmentName}-VPCPublicRoute
    VPCPrivateRouteTable1:
        Description: Private Routing AZ1
        Value: !Ref PrivateRouteTable1
        Export:
            Name: !Sub ${EnvironmentName}-VPCPrivateRouteAZ1
    VPCPrivateRouteTable2:
        Description: Private Routing AZ2
        Value: !Ref PrivateRouteTable2
        Export:
            Name: !Sub ${EnvironmentName}-VPCPrivateRouteAZ2
    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
        Export:
            Name: !Sub ${EnvironmentName}-PublicSubnets
    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
        Export:
            Name: !Sub ${EnvironmentName}-PrivateSubnets
    PublicSubnet1:
        Description: Reference to the Public Subnet of the first AZ
        Value: !Ref PublicSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PublicSubnet1
    PublicSubnet2:
        Description: Reference to the Public Subnet of the second AZ
        Value: !Ref PublicSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PublicSubnet2
    PrivateSubnet1:
        Description: Reference to the Private Subnet of the first AZ
        Value: !Ref PrivateSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PrivateSubnet1
    PrivateSubnet2:
        Description: Reference to the Private Subnet of the second AZ
        Value: !Ref PrivateSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PrivateSubnet2
